media/static/xkcd.css
body {
  background: #96a8c8;
  margin: 0;
  text-align: center;
}

div.main {
  background:#ffffff;
  border:1px solid #000000;
  margin-bottom:70px;
  margin-top:50px;
  width:48em;
  margin-right: auto;
  margin-left: auto;
  padding: 7px 7px 30px 7px;
}

h1 {
  font-size: 1.2em;
  font-variant:small-caps;
  font-family:Lucida,sans-serif;
  font-weight:800;
  margin-bottom:15px;
  margin-top:15px;
}

/* Header Links */

ul.lnk {
  margin: auto;
  padding: 0px;
  list-style-type: none;
  width:560px;
}

ul.lnk li {
  display: block;
  width: 80px;
  float: left;
}

ul.lnk li a {
  color:black;
  text-decoration:underline;
  font-size:1.3em;
  font-variant:small-caps;
  font-family:Lucida,sans-serif;
  font-weight:800;
  text-transform:capitalize;
}

/* Comics List */

div.list {
  margin: 0;
  padding: 0;
  vertical-align: bottom;
}

ul.list {
  list-style: none;
  padding: 0;
  margin: 0;
  width: 44em;
  text-align: center;
}

li.real, li.fake, li.invisible {
  display: block;
  float: left;
  width: 2em;
  height: 1.7em;
  margin: 0.1em;
  line-height: 1.7em;
}

li.fake {
  color: #D0D0D0;
}
  
li.real a {
  color:#96A8C8;
  font-weight:bold;
  text-decoration:none;
}

li.invisible a {
  color:  #962020;
  font-weight:bold;
  text-decoration:none;
}

/* Comics Nav */

ul.nav {
  margin:auto;
  padding: 1em;
  list-style-type:none;
  width:400px;
  text-align: center;
  margin-top: 1em;
  margin-bottom: 1em;
}

ul.nav li{
  display:block;
  float: left;
}

ul.nav li a{
  display: block;
  margin: 0px 4px 0px 4px;
  width:70px;
  border:1px solid black;
  background-color:#6E7B91;	
  color:#FFF;
  text-decoration:none;
  font-size:16px;
  font-variant:small-caps;	
  font-family:Lucida, sans-serif;
  font-weight:600;
}

ul.nav li a:hover{
	background-color:#FFF;
	color:#6E7B91;
}

/* Comics */

div.comics_text {
  margin-top: 1em;
  margin-bottom: 1em;
}

div.comment {
  border-top: 1px solid grey;
  padding-top: 15px;
}



/* Utility */

div.clearer {
  clear: left;
  height: 1px;
}

/* Unpublished Comics */

ul.unpublished_list li {
  list-style: none;
  width: 30em;
  text-align: left;
  line-height: 50px;
}

ul.unpublished_list li img {
  vertical-align: middle;
  text-decoration: none;
}

ul.unpublished_list li a {
  text-decoration: none;
  color: black;
}

img.thumb {
  padding: 1px;
}

img.invisible {
  border: 1px dashed #962020;
}

div.sys {
  background-color: white;
  border-bottom: 1px solid black;
  text-align: center;
  font-family: monospace;
  font-size:16px;
  color: #000000;
}

div.sys ul {
  margin: auto;
  padding: 0px;
  list-style-type: none;
  align: center;
}

div.sys ul li {
  display: block;
  padding-left: 10px;
  padding-right: 10px;
  float: left;
}

div.sys a {
  color: black;
  text-decoration: none;
}

div.code {
  width: 40em;
  border: solid 1px black;
  font-family: monospace;
  margin: 10px;
  padding: 5px;
}

.me {
  font-weight:bold;
}

div.buttons {
  margin: 5px;
}

div.buttons form {
  display: inline;
}

form.edit table {
  width: 90%;
  text-align: left;
  border-collapse: collapse;
}

form.edit table th {
  vertical-align: top;
}

form.edit table th {
  border: 1px solid #CCC;
  border-right: 0;
  padding: 5px;
  font-size: 0.8em;
  width: 10em;
  font-weight: normal;
}

form.edit table td {
  border: 1px solid #CCC;
  border-left: 0;
  padding: 5px;
}

form.edit textarea {
  width: 100%;
  height: 8em;
}

td.save {
  text-align: right;
}

input,textarea {
  border: 1px solid #888;
  padding: 2px;
}

ul.errorlist {
  float: right;
  color: red;
  list-style: none;
  margin: 0;
}

#id_cid {
  width: 3em;
}

